webapi/static/annotator.css
body {
   font-size: .8em !important;
   font-family: sans-serif;
}
.button {
   font-size: .8em !important;
}
.ui-button-text {
   font-size: inherit !important;
}
div.thumbnail {
  position: relative;
  display: inline-block;
  padding: 10px;
  vertical-align: top;
  cursor: crosshair;
}
img.thumbnail {
  margin-left: auto;
  margin-right: auto;
}
.atorigin {
  position: absolute;
  top: 10px;  /* thumbnail.div's padding */
  left: 10px;
}
.caption {
    text-align: center;
}
.subcaption {
    text-align: center;
    font-size: 8px;
}

#rightPanel {
    float: right;
   // width: 320px;
    width:420px;
    margin: auto;
    border: 2px solid teal;
	border-radius: 10px 5px;
	border-radius: 10px; 
    padding: 5px;
    margin-left: 5px;
    display: none;

}

.subpanel {
border: 2px solid teal;
border-top-left-radius: 10px 5px;
border-top-right-radius: 10px; 
padding: 2px;
padding-top: 4px;
padding-left: 4px;
margin-bottom:4px;
}

.left { float: left; }
.right { float: right; }
.hidden { display: none; }
.invalid {
    color: black;
}

.armdisarm{float:right;width:auto;}

#assignment{
// width:300px;
width:400px;
}

.selectable .ui-selecting { background: #FECA40; }
.selectable .ui-selected { background: #F39814; color: white; }
.selectable { list-style-type: none; margin: 0; padding: 0; width: auto; }
.selectable li {
 margin: 2px; padding: 0.2em; font-size: 1em; height: 2em; 

}
.selectable li div {float:left; padding-right:3px; text-wrap:normal; }

.lockcontrol {
    float: right;
    margin:3px;
}​

.percentKnob{float:left}
#existingTable { float:left}

